--- a/train_efficientnet.ipynb
+++ b/train_efficientnet.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create necessary directory if not exists\n",
+    "#create necessary directory if the directory doesn't exist\n",
     "def create_necessary_folder():\n",
     "    #make dir for plottings\n",
     "    if not os.path.exists('plottings'): os.mkdir(f'{os.getcwd()}\\\\plottings')\n",
